add feature review event